Add API endpoint for retrieving notes between two dates